# AnberPorts

./: AnberPorts.sh  LICENSE.md  README.md  pack.sh
.github/: FUNDING.yml
AnberPorts/: AnberPorts  Makefile  main.c
AnberPorts-Joystick/: Makefile  README.md  gamecontrollerdb.txt  main.c  parser.h
AnberPorts/assets/: showcase.psd  sponsor.psd
AnberPorts/etc/: osk.conf
AnberPorts/lib32/: libGL.so.1  libGLU.so.1  libXext.so.6  libXrender.so.1  libXxf86vm.so.1  libcurl.so.4
AnberPorts/lib64/: libGL.so.1  libGLU.so.1  libX11.so.6  libXrandr.so.2
AnberPorts/scripts/beta/: Amazon-Luna  Diablo2  Google-Stadia  Nvidia-GeForce-NOW
AnberPorts/scripts/games/: AM2R  Blood  Descent  (+38 more)
misc/: AM2R.sh  Alien vs. Predator.sh  AnberCloud Setup.sh  AnberCloud Sync.sh  Blood.sh  Cannonball.sh  Cave Story.sh  Commander Genius.sh  Counter-Strike.sh  Descent 2.sh  Descent.sh  Diablo 1.sh  Digger.sh  Doom 2.sh  Doom.sh  Duke Nukem 3D.sh  Exhumed.sh  Flashback.sh  Half-Life Blue Shift.sh  Half-Life.sh  Maldita Castilla.sh  Moonlight Embedded.sh  NAM.sh  Prince of Persia.sh  Quake 1.sh  Quake 2.sh  Quake 3.sh  Redneck Rampage Rides Again.sh  Redneck Rampage.sh  Rick Dangerous.sh  Shadow Warrior.sh  Sonic Robo Blast 2 Kart.sh  Sonic Robo Blast 2.sh  Spelunky.sh  Star Wars Jedi Knight - Jedi Academy.sh  Super Crate Box.sh  Super Mario War.sh  System Shock.sh  The Clue.sh  The Ur-Quan Masters.sh  (+7 more)
osk-sdl/: LICENSE  README.md  meson.build
osk-sdl/src/: config.cpp  config.h  draw_helpers.cpp  draw_helpers.h  keyboard.cpp  keyboard.h  main.cpp  tooltip.cpp  tooltip.h  util.cpp  util.h
(+6 files in other folders)
